2017-05-19  Charlie Zender  <zender@uci.edu>

	* CICE grid partially inferred over masked cells

	* NCO 4.6.7-beta02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.7-beta02 final changes';git push
	git tag -a 4.6.7-beta02 -m 'ncap2 in-fill, MTA flags, ERWG rgn hints, SGS, ncremap rationalization';git push --tags

	* Add stubs to infer entire grid from regional rectangular CICE in curvilinear format with masked land

	* Add fl_fmt=CDF5 options to documentation

	* Re-run test cases, fix rationalization bugs, improve documentation...

2017-05-18  Charlie Zender  <zender@uci.edu>

	* Document new ncremap options

	* Rationalize ncremap options. Changes to -a -E -T -w -W -U.

	* NCO 4.6.7-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.7-beta01 final changes';git push
	git tag -a 4.6.7-beta01 -m 'ncap2 in-fill, MTA flags, ERWG rgn hints, SGS';git push --tags

2017-05-17  Charlie Zender  <zender@uci.edu>

	* Document --rgn_dst/src, -r rgr_thr

	* Add ncremap -r rgr_thr option

	* Make mod04 automatically unpack

	* Change --hnt_dst/src options to --rgn_dst/src flags

	* Add ncremap -P mod04 and make -a tempest synonymous with -w tempest

2017-05-16  Charlie Zender  <zender@uci.edu>

	* Add ncremap --hnt_dst/src options to manually specify	'--dst_regional' for supplied (not inferred) grids

2017-05-15  Charlie Zender  <zender@uci.edu>

	* Allow ncatted to write empty NC_STRING

2017-05-13 Henry Butowsky  <henryb@hush.com>

	* ncap2 add "missing()" and synonym "mask_miss()" to utl_cls()
	It creates 0/1 array for expression (var == var_miss), returned type same as input type

2017-05-12  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.7-alpha06 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.7-alpha06 final changes';git push
	git tag -a 4.6.7-alpha06 -m 'Polish and document SGS option';git push --tags

	* Change ncremap pdq_typ to prc_typ to reflect expanded role

	* Document SGS algorithm
